create- JSON, Style

--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dice Big Project</title>
 
-    <style>
-        body{
-            background-color: red;
-            color: white;
-        }
-    </style>
+    <!-- Script -->
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+
+    <!-- Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;700&display=swap" rel="stylesheet">
+
+    <!-- Style -->
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <h1>Hello Rocket Project</h1>
