update- intro page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,14 +10,36 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 
     <!-- Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kodchasan:wght@300;600&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/6ddd12fa46.js" crossorigin="anonymous"></script>
 
     <!-- Style -->
     <link rel="stylesheet" href="style.css">
 
+
 </head>
+
 <body>
-    <h1>Hello Rocket Project</h1>
-    
+    <div class="intro center_dis">
+        <img class="intro_img" src="img/intro/i1.png" alt="">
+        <h1 class="cl2 fz_300">Dice your <span class="fz_600">Big Project</span></h1>
+    </div>
+    <div class="intro center_dis">
+        <img class="intro_img" src="img/intro/i2.png" alt="">
+        <h1 class="cl2 fz_300">ถ้าหากตอนนี้คุณมีเงินอยู่ <span class="fz_600">$1 Billion</span></h1>
+    </div>
+    <div class="intro center_dis">
+        <img class="intro_img" src="img/intro/i3.png" alt="">
+        <h1 class="cl2 fz_300">จะสร้าง <span class="fz_600">Big Project</span> อะไรได้บ้างนะ</h1>
+    </div>
+
+    <div>
+
+    </div>
+
+    <div class="arrow bounce">
+        <a href="#"><i class="cl4 fas fa-angle-down"></i></a>
+      </div>
 </body>
+
 </html>
