--- a/index.html
+++ b/index.html
@@ -41,9 +41,12 @@
 
     </div>
 
-    <div class="arrow bounce">
-        <a><i class="cl4 fas fa-angle-down punchline"></i></a>
+    <div class="fade">
+        <div class="arrow bounce">
+            <a><i class="fas fa-angle-down punchline"></i></a>
+        </div>
     </div>
+
 
     <script>
         ScrollReveal().reveal('.headline');
