--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
     <!-- Script -->
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css2?family=Kodchasan:wght@300;600&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/6ddd12fa46.js" crossorigin="anonymous"></script>
@@ -26,15 +39,17 @@
 <body>
     <div class="intro center_dis">
         <img class="intro_img tagline" src="img/intro/i1.png" alt="">
-        <h1 class="cl2 fz_300 tagline">Dice your <span class="fz_600">Big Project</span></h1>
+        <a href="boardgame.html">
+            <h1 class="ci2 fz_300 tagline">Dice your <span class="fz_600">Big Project</span></h1>
+        </a>
     </div>
     <div class="intro center_dis">
         <img class="intro_img tagline" src="img/intro/i2.png" alt="">
-        <h1 class="cl2 fz_300 tagline">ถ้าหากตอนนี้คุณมีเงินอยู่ <span class="fz_600">$1 Billion</span></h1>
+        <h1 class="ci2 fz_300 tagline">ถ้าหากตอนนี้คุณมีเงินอยู่ <span class="fz_600">$1 Billion</span></h1>
     </div>
     <div class="intro center_dis">
         <img class="intro_img tagline" src="img/intro/i3.png" alt="">
-        <h1 class="cl2 fz_300 tagline">จะสร้าง <span class="fz_600">Big Project</span> อะไรได้บ้างนะ</h1>
+        <h1 class="ci2 fz_300 tagline">จะสร้าง <span class="fz_600">Big Project</span> อะไรได้บ้างนะ</h1>
     </div>
 
     <div>
