--- a/boardgame.html
+++ b/boardgame.html
@@ -32,16 +32,18 @@
 
     <style>
         .col-1 {
-            height: 5em;
+            height: 6em;
         }
 
-        .now {
+        .character {
             position: absolute;
             top: -1em;
             left: 1.5em;
+
             width: 3em;
             height: 3em;
             background-color: #000;
+            /* background-image: url(img/character/c1.png); */
         }
     </style>
 </head>
@@ -53,32 +55,32 @@
                 <div class="col-3 p-5">
                     <div class="money">
                         <img class="buget_img" src="img/boards/coin.png" alt="">
-                        <h5 class="buget_value fz_600 ci1">100 billion</h5>
+                        <h4 class="buget_value fz_600 ci1">100 billion</h4>
                     </div>
                     <div class="dice mt-5">
-                        <img class="dice_img" src="img/dice/d1.png" alt="">
+                        <a onclick="roll()">
+                            <img @click="walkAway(1)" id="dice" src="img/dice/d1.svg">
+                        </a>
                     </div>
                 </div>
                 <div class="col-9">
 
-                    <button class="btn btn-primary mb-5" @click="walkAway(1)">Walk 1</button>
-                    <button class="btn btn-primary mb-5" @click="walkAway(2)">Walk 2</button>
-                    <button class="btn btn-primary mb-5" @click="walkAway(3)">Walk 3</button>
+                    <!-- <button class="btn btn-primary mb-5" @click="walkAway(1)">Walk 1</button>-->
 
-                    <div class="row">
-                        <div class="col-1 bg-danger" id="pos1"></div>
-                        <div class="col-1 bg-warning" id="pos2"></div>
-                        <div class="col-1 bg-danger" id="pos3"></div>
-                        <div class="col-1 bg-warning" id="pos4"></div>
-                        <div class="col-1 bg-danger" id="pos5"></div>
-                        <div class="col-1 bg-warning" id="pos6"></div>
-                        <div class="col-1 bg-danger" id="pos7"></div>
-                        <div class="col-1 bg-warning" id="pos8"></div>
-                        <div class="col-1 bg-danger" id="pos9"></div>
-                        <div class="col-1 bg-warning" id="pos10"></div>
-                        <div class="col-1 bg-danger" id="pos11"></div>
-                        <div class="col-1 bg-warning" id="pos12"></div>
+                    <div class="pt-5 row">
+                        <div class="col-1" id="pos1"></div>
+                        <div class="col-2 chs1" id="pos2"></div>
+                        <div class="col-1 chs4" id="pos4"></div>
+                        <div class="col-1 chs2" id="pos5"></div>
+                        <div class="col-1 chs1" id="pos6"></div>
+                        <div class="col-1 chs3" id="pos7"></div>
+                        <div class="col-1 chs2" id="pos8"></div>
+                        <div class="col-1 chs4" id="pos9"></div>
+                        <div class="col-1 chs1" id="pos10"></div>
+                        <div class="col-1 chs3" id="pos11"></div>
+                        <!-- <div class="col-1 chs2" id="pos12"></div> -->
                     </div>
+
                 </div>
 
             </div>
@@ -99,7 +101,7 @@
                     this.before = this.count;
                     this.count += add;
                     document.querySelector('#pos' + this.before).innerHTML = '';
-                    document.querySelector('#pos' + this.count).innerHTML = '<div class="now"></div>';
+                    document.querySelector('#pos' + this.count).innerHTML = '<div class="character"></div>';
                 }
             },
             mounted() {
@@ -108,5 +110,14 @@
         })
     </script>
 </body>
+
+<script>
+
+    var sides = 6
+    function roll() {
+        var randomNumber = Math.floor(Math.random() * this.sides) + 1;
+        var dice = document.getElementById('dice').src = "img/dice/d" + randomNumber + ".svg";
+    }
+</script>
 
 </html>
