update- button in intro page

--- a/index.html
+++ b/index.html
@@ -45,13 +45,12 @@
     </div>
     <div class="intro center_dis">
         <img class="intro_img tagline" src="img/intro/i2.png" alt="">
-        <h1 class="ci2 fz_300 tagline">ถ้าหากตอนนี้คุณมีเงินอยู่ <span class="fz_600">$100 Billion</span></h1>
+        <h1 class="ci2 fz_300 tagline">หากตอนนี้คุณมีเงินอยู่ <span class="fz_600">$100 Billion</span></h1>
     </div>
     <div class="intro center_dis">
         <img class="intro_img tagline" src="img/intro/i3.png" alt="">
-        <a href="boardgame.html">
             <h1 class="ci2 fz_300 tagline">จะสร้าง <span class="fz_600">Big Project</span> อะไรได้บ้างนะ</h1>
-        </a>
+            <div href="boardgame.html">enter</div>
     </div>
 
     <div>
