--- a/boardgame.html
+++ b/boardgame.html
@@ -29,23 +29,6 @@
     <!-- Style, Script -->
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
-
-    <style>
-        .col-1 {
-            height: 6em;
-        }
-
-        .character {
-            position: absolute;
-            top: -1em;
-            left: 1.5em;
-
-            width: 3em;
-            height: 3em;
-            background-color: #000;
-            /* background-image: url(img/character/c1.png); */
-        }
-    </style>
 </head>
 
 <body>
@@ -56,7 +39,7 @@
 <!----------------------------------------------------------------------------->
 <!--------------------------------------------------------------------- Left -->
 
-                <div class="col-3 p-5">
+                <div class="col-md-3 p-5">
                     <div class="money">
                         <img class="buget_img" src="img/boards/coin.png" alt="">
                         <h4 class="buget_value fz_600 ci1">100 billion</h4>
@@ -71,24 +54,61 @@
 <!------------------------------------------------------------------------------>
 <!--------------------------------------------------------------------- Board -->
 
-                <div class="col-9">
+                <div class="col-md-9">
 
                     <!-- <button class="btn btn-primary mb-5" @click="walkAway(1)">Walk 1</button>-->
 
                     <div class="pt-5 row">
-                        <div class="col-1" id="pos1"></div>
-                        <div class="col-2 chs1" id="pos2"></div>
-                        <div class="col-1 chs4" id="pos4"></div>
-                        <div class="col-1 chs2" id="pos5"></div>
-                        <div class="col-1 chs1" id="pos6"></div>
-                        <div class="col-1 chs3" id="pos7"></div>
-                        <div class="col-1 chs2" id="pos8"></div>
-                        <div class="col-1 chs4" id="pos9"></div>
-                        <div class="col-1 chs1" id="pos10"></div>
-                        <div class="col-1 chs3" id="pos11"></div>
-                        <!-- <div class="col-1 chs2" id="pos12"></div> -->
+                        <div class="col-4"></div>
+                        <div class="col-1 chs1 border1" id="pos1">1</div>
+                        <div class="col-1 chs2 border1" id="pos2">2</div>
+                        <div class="col-1 chs3 border1" id="pos3">3</div>
+                        <div class="col-1 chs2 border1" id="pos4">4</div>
+                        <div class="col-1 chs4 border1" id="pos5">5</div>
+                        <div class="col-1 chs1 border1" id="pos6">6</div>
+                        <div class="col-1 chs3 border2"></div>
+                        <div class="col-1"></div>
                     </div>
 
+                    <div class="row">
+                        <div class="col-10"></div>
+                        <div class="col-1 chs3 border3" id="pos7">7</div>
+                        <div class="col-1"></div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-1"></div>
+                        <div class="col-1 chs3">16</div>
+                        <div class="col-1 chs2 border1" id="pos15">15</div>
+                        <div class="col-1 chs1 border1" id="pos14">14</div>
+                        <div class="col-1 chs4 border1" id="pos13">13</div>
+                        <div class="col-1 chs3 border1" id="pos12">12</div>
+                        <div class="col-1 chs1 border1" id="pos11">11</div>
+                        <div class="col-1 chs2 border1" id="pos10">10</div>
+                        <div class="col-1 chs4 border1" id="pos9">9</div>
+                        <div class="col-1 chs1 border1" id="pos8">8</div>
+                        <div class="col-1 chs3 border4" id="pos7"></div>
+                        <div class="col-1" id="pos12"></div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-1"></div>
+                        <div class="col-1 chs3" id="pos16">16</div>
+                        <div class="col-10"></div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-1"></div>
+                        <div class="col-1 chs3">16</div>
+                        <div class="col-1 chs2" id="pos17">17</div>
+                        <div class="col-1 chs1" id="pos18">18</div>
+                        <div class="col-1 chs4" id="pos19">19</div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-4"></div>
+                        <div class="col-1 chs4" id="pos20">20</div>
+                    </div>
                 </div>
 
             </div>
@@ -109,7 +129,6 @@
         },
         methods: {
             walkAway: function (add) {
-                // console.log()
                 this.before = this.count;
                 this.count += add;
                 document.querySelector('#pos' + this.before).innerHTML = '';
@@ -126,12 +145,12 @@
 <!--------------------------------------------------------------------- JSON -->
 
 <script>
-    let requestURL = "superheroes.json";
+    let requestURL = "project.json";
     let request = new XMLHttpRequest();
     request.onreadystatechange = function () {
         if (request.readyState == 4 && request.status == 200) {
-            var myArr = JSON.parse(request.responseText);
-            myFunction(myArr);
+            var myPro = JSON.parse(request.responseText);
+            displayFn(myPro);
         }
     };
     request.open("GET", requestURL, true);
