--- a/boardgame.html
+++ b/boardgame.html
@@ -58,6 +58,8 @@
 
                     <!-- <button class="btn btn-primary mb-5" @click="walkAway(1)">Walk 1</button>-->
 
+                    <!--------------------------------------------------------------------- row1 -->
+
                     <div class="pt-5 row">
                         <div class="col-4"></div>
                         <div class="col-1 chs1 border1" id="pos1">1</div>
@@ -66,9 +68,11 @@
                         <div class="col-1 chs2 border1" id="pos4">4</div>
                         <div class="col-1 chs4 border1" id="pos5">5</div>
                         <div class="col-1 chs1 border1" id="pos6">6</div>
-                        <div class="col-1 chs3 border2"></div>
+                        <div class="col-1 chs3 border2" style="border-top-right-radius: 100%;"></div>
                         <div class="col-1"></div>
                     </div>
+
+                    <!--------------------------------------------------------------------- row2 -->
 
                     <div class="row">
                         <div class="col-10"></div>
@@ -76,41 +80,46 @@
                         <div class="col-1"></div>
                     </div>
 
+                    <!--------------------------------------------------------------------- row3 -->
+
                     <div class="row">
                         <div class="col-1"></div>
-                        <div class="col-1 chs3">16</div>
-                        <div class="col-1 chs2 border1" id="pos15">15</div>
-                        <div class="col-1 chs1 border1" id="pos14">14</div>
+                        <div class="col-1 chs2 border5" style="border-top-left-radius: 100%;"></div>
+                        <div class="col-1 chs1 border6" id="pos15">15</div>
+                        <div class="col-1 chs2 border1" id="pos14">14</div>
                         <div class="col-1 chs4 border1" id="pos13">13</div>
                         <div class="col-1 chs3 border1" id="pos12">12</div>
                         <div class="col-1 chs1 border1" id="pos11">11</div>
                         <div class="col-1 chs2 border1" id="pos10">10</div>
                         <div class="col-1 chs4 border1" id="pos9">9</div>
                         <div class="col-1 chs1 border1" id="pos8">8</div>
-                        <div class="col-1 chs3 border4" id="pos7"></div>
+                        <div class="col-1 chs3 border4" style="border-bottom-right-radius: 100%;"></div>
                         <div class="col-1" id="pos12"></div>
                     </div>
 
+                    <!--------------------------------------------------------------------- row4 -->
+
                     <div class="row">
                         <div class="col-1"></div>
-                        <div class="col-1 chs3" id="pos16">16</div>
+                        <div class="col-1 chs2 border3" id="pos16">16</div>
                         <div class="col-10"></div>
                     </div>
 
                     <div class="row">
                         <div class="col-1"></div>
-                        <div class="col-1 chs3">16</div>
-                        <div class="col-1 chs2" id="pos17">17</div>
-                        <div class="col-1 chs1" id="pos18">18</div>
-                        <div class="col-1 chs4" id="pos19">19</div>
+                        <div class="col-1 chs2 border4" style="border-bottom-left-radius: 100%;"></div>
+                        <div class="col-1 chs3 border6" id="pos17">17</div>
+                        <div class="col-1 chs1 border1" id="pos18">18</div>
+                        <div class="col-1 chs4 border2" id="pos19" style="border-top-right-radius: 100%;">19</div>
                     </div>
+
+                    <!--------------------------------------------------------------------- row5 -->
 
                     <div class="row">
                         <div class="col-4"></div>
-                        <div class="col-1 chs4" id="pos20">20</div>
+                        <div class="col-1 chs3 border0" id="pos20">20</div>
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
