--- a/boardgame.html
+++ b/boardgame.html
@@ -137,7 +137,8 @@
         <!--------------------------------------------------------------------- Modal -->
         <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1"
             aria-labelledby="staticBackdropLabel" aria-hidden="true">
-            <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-dialog modal-lg">
+                <!-- modal-dialog-centered -->
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -145,8 +146,18 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <div class="row">
+                        <div class="row pr-5 pl-5">
+                            <div class="col-6">
+                                <div class="sunray" style="background-image: url(img/modals/sunray1.png);background-repeat: no-repeat;background-attachment: cover;">
 
+                                </div>
+
+                            </div>
+                            <div class="col-6">
+                                <h3 class="ci1 fz_600">{{ data[index].name }}</h3>
+                                <br>
+                                <p class="ci2 fz_300">{{ data[index].highlight }}</p>
+                            </div>
                         </div>
                     </div>
                 </div>
