--- a/boardgame.html
+++ b/boardgame.html
@@ -148,10 +148,10 @@
                     <div class="modal-body">
                         <div class="row pr-5 pl-5">
                             <div class="col-6">
-                                <div class="sunray" style="background-image: url(img/modals/sunray1.png);background-repeat: no-repeat;background-attachment: cover;">
-
+                                <div class="sunray"
+                                    style="background-image: url('img/modals/sunray1.png');">
+                                    <img :src="'img/modals/p'+index+'.svg'" class=" mx-auto center_dis">
                                 </div>
-
                             </div>
                             <div class="col-6">
                                 <h3 class="ci1 fz_600">{{ data[index].name }}</h3>
@@ -232,6 +232,84 @@
                     img: {
                         badge_img: "b4.svg",
                         project_img: "p4.jpg"
+                    }
+                },
+                {
+                    id: 5,
+                    name: "Orbiter Vehicle Designation (OV-102)",
+                    highlight: "แย่แล้ว! ยานขนส่งอวกาศโคลัมเบียที่กำลังเดินทางกลับพื้นโลกเกิดการระเบิดขึ้น ทำให้สูญเสียนักบินของเราไปถึง 7 คน",
+                    details: "ยานขนส่งอวกาศโคลัมเบียขององค์การนาซา เกิดการระเบิดเหนือท้องฟ้าของสหรัฐฯ ขณะกำลังเดินทางกลับสู่พื้นโลก อุบัติเหตุครั้งนี้ทำให้นักบิน 7 คนเสียชีวิต ยานขนส่งอวกาศโคลัมเบียระเบิดเมื่อเวลา 16 นาทีก่อนที่จะได้ร่อนลงจอดที่ศูนย์อวกาศเคเนดีในฟลอริดาตามกำหนดการ โคลัมเบียเพิ่งจะกลับจากการปฏิบัติภารกิจในวงโคจรรอบโลกเป็นเวลานาน 16 วัน ซึ่งมีเป้าหมายในการทดลองทางวิทยาศาสตร์หลายสิบรายการ",
+                    badge: "อุบัติเหตุร้ายแรงที่ไม่คาดคิด",
+                    budget: 0,
+                    currency: "-",
+                    img: {
+                        badge_img: "b5.svg",
+                        project_img: "p5.jpg"
+                    }
+                },
+                {
+                    id: 6,
+                    name: "Glory mission",
+                    highlight: "แจ้งเตือน! ขณะนี้จรวด Taurus XLของเราที่ได้ส่งขึ้นไปไม่สามารถสลัดดาวเทียวออกจากตัวจรวดได้เพราะอุปกรณ์ไม่เป็นไปตามมาตรฐาน  ทำให้กระสวยและดาวเทียวตกอยู่กลางมหาสมุทร",
+                    details: "โครงการดาวเทียมที่วางแผนไว้เพื่อเฝ้าสังเกตระดับของก๊าซคาร์บอนไดออกไซด์ (CO2) ในชั้นบรรยากาศ และรวบรวมข้อมูลเพื่อทำความเข้าใจในวัฏจักรของธาตุคาร์บอน ในวันที่ 24 กุมภาพันธ์ ค.ศ. 2009 จรวดชื่อ Taurus XL ถูกส่งขึ้นไป เพื่อนำดาวเทียมเข้าสู่วงโคจร แต่เกิดความผิดพลาดขึ้น เนื่องจาก Payload fairing ไม่ได้ถูกสลัดออกจากดาวเทียมตามแผน ทำให้กระสวยทั้งหมดพร้อมกับดาวเทียมตกลงสู่มหาสมุทรใกล้กับแอนตาร์กติกา วันที่ 4 มีนาคม ค.ศ. 2011 เกิดความผิดพลาดในทำนองเดียวกัน ผลจากการสอบสวนพบว่าสาเหตุของความล้มเหลวทั้ง 2 ครั้ง เกิดจากชิ้นส่วนอลูมิเนียมที่ถูกอัดขึ้นรูป และใช้เป็นส่วนประกอบของ Payload fairing ที่ไม่เป็นไปตามมาตรฐาน",
+                    badge: "ความผิดพลาดจากอุปกรณ์ที่ผิดรูป",
+                    budget: 0,
+                    currency: "-",
+                    img: {
+                        badge_img: "b6.svg",
+                        project_img: "p6.jpg"
+                    }
+                },
+                {
+                    id: 7,
+                    name: "Soyuz MS-10",
+                    highlight: "ทางเราพบว่ายานอวกาศ Soyuz MS-10 ของคุณเกิดอุบัติเหตุในการปล่อยยานทำให้ต้องกลับมายังโลก โชคดี! ทางเราไม่พบผู้เสียชีวิตในอุบัติเหตุ",
+                    details: "ยานอวกาศ Soyuz มีจุดประสงค์เพื่อขนส่งสมาชิกลูกเรือ Expedition 57 สองคนไปยังสถานีอวกาศนานาชาติ เนื่องจากความล้มเหลวของเครื่องกระตุ้นยานพาหนะปล่อย Soyuz-FG MS-10 ทำให้ไม่กี่นาทีหลังจากการออกตัว ยานเกิดความล้มเหลวในสถานการณ์ฉุกเฉินเนื่องจากบูสเตอร์และต้องกลับมายังโลก ลูกเรือทั้งสองคนกลับมาได้อย่างปลอดภัย และการยกเลิกเที่ยวบิน MS-10 เป็นตัวอย่างแรกของอุบัติเหตุที่เกิดจากลูกเรือรัสเซียในรอบ 35 ปีนับตั้งแต่ Soyuz T-10-1",
+                    badge: "ความล้มเหลวในการปล่อยยาน",
+                    budget: 0,
+                    currency: "-",
+                    img: {
+                        badge_img: "b7.svg",
+                        project_img: "p7.jpg"
+                    }
+                },
+                {
+                    id: 8,
+                    name: "The MOSAiC",
+                    highlight: "ยินดีด้วย! เรือที่คุณสร้างได้นำนักวิทยาศาสตร์เข้าสู่ขั้วโลกเหนือเพื่อสำรวจต้นตอของปัญหาภาวะโลกร้อน",
+                    details: "เรือวิจัยโลร์สเติร์นนำคณะนักวิทยาศาสตร์นานาชาติ ออกเดินทางจากท่าเรือเมืองทรอมโซในนอร์เวย์ มุ่งหน้าสู่ภูมิภาคอาร์ติกแถบขั้วโลกเหนือ ที่ซึ่งจะปักหลักอยู่นาน 1 ปี เพื่อทำการสำรวจวิจัยเกี่ยวกับการเปลี่ยนแปลงของสภาพภูมิอากาศโลก ซึ่งเป็นต้นตอของปัญหาภาวะโลกร้อน",
+                    badge: "กัปตันผู้พิชิตโลกร้อน",
+                    budget: 165000000,
+                    currency: "million",
+                    img: {
+                        badge_img: "b8.svg",
+                        project_img: "p8.jpg"
+                    }
+                },
+                {
+                    id: 9,
+                    name: "Mars orbiter mission",
+                    highlight: "ว้าว คุณได้สร้างเทคโนโลยีทางวิทยาศาสตร์เพื่อใช้ในการปฏิบัติการสำรวจดาวอังคารแล้ว",
+                    details: "โครงการพัฒนาเทคโนโลยีสำหรับการออกแบบและการวางแผนจัดการ การปฎิบัติภารกิจระหว่างดาวเคราะห์ และ สำรวจลักษณะพื้นผิวของดาวอังคาร การสังเกตุชั้นบรรยากาศของดาวอังคารโดยใช้เครื่องมือทางวิทยาศาสตร์",
+                    badge: "นักสำรวจดาวอังคาร",
+                    budget: 74000000,
+                    currency: "million",
+                    img: {
+                        badge_img: "b9.svg",
+                        project_img: "p9.jpg"
+                    }
+                },
+                {
+                    id: 10,
+                    name: "XMM-Newton",
+                    highlight: "สุดยอด ด้วยกล้องโทรทรรศน์ที่คุณได้สร้างขึ้นทำให้สามารถส่องได้ออกนอกไปในอวกาศเพื่อเฝ้าดูความลับของจักรวาล",
+                    details: "โครงการเกี่ยวกับการตรวจจับและศึกษาแหล่งกำเนิดรังสีเอกซ์บนท้องฟ้าผ่านดาวเทียมที่ติดตั้งกล้องโทรทรรศน์ในอวกาศเพราะเนื่องจากชั้นบรรยากาศของโลกปิดกั้นรังสีเอกซ์ทั้งหมด รวมถึงใช้ในการไขความลึกลับของจักรวาล",
+                    badge: "สิ่งลึกลับในอวกาศ",
+                    budget: 816000000,
+                    currency: "million",
+                    img: {
+                        badge_img: "b10.svg",
+                        project_img: "p10.jpg"
                     }
                 }
             ]
